# TTorch

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: publish.yml
include/: autograd.h  tensor.h
src/: autograd.cpp  bindings.cpp  tensor.cpp
tests/: test.cpp
